overflow x on mobile fixed

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -34,6 +34,7 @@ body {
 	position: relative;
 	font-family: 'Montserrat', sans-serif;
 	background-color: $bg-color;
+	overflow-x: hidden
 }
 
 .shadow-bg {
@@ -308,7 +309,9 @@ header {
 		img {
 			height: 300px;
 			object-fit: cover;
+	
 		}
+		margin: 50px;
 	}
 	.card:hover {
 		transform: scale(1.1);
